compiler-core/src/go/tests/snapshots/gleam_core__go__tests__tuples__nested_tuple.snap
---
source: compiler-core/src/go/tests/tuples.rs
expression: "\nfn a() {\n  #(\n    \"1111111111111111111111111111111\",\n    #(\"1111111111111111111111111111111\", \"2\", \"3\"),\n    \"3\",\n  )\n}\n"
---
package mod

func a() struct {
F0 string
  F1 struct {
  F0 string
    F1 string
    F2 string
  }
  F2 string
} {
  return struct {
  F0 string
    F1 struct {
    F0 string
      F1 string
      F2 string
    }
    F2 string
  }{F0: "1111111111111111111111111111111", F1: struct {
  F0 string
    F1 string
    F2 string
  }{F0: "1111111111111111111111111111111", F1: "2", F2: "3"}, F2: "3"}
}
