compiler-core/src/go/tests/snapshots/gleam_core__go__tests__tuples__tuple.snap
---
source: compiler-core/src/go/tests/tuples.rs
expression: "\nfn a() {\n  #(\"1\", \"2\", \"3\")\n}\n"
---
package mod

func a() struct {
F0 string
  F1 string
  F2 string
} {
  return struct {
  F0 string
    F1 string
    F2 string
  }{F0: "1", F1: "2", F2: "3"}
}
